<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">


    <fragment
        android:id="@+id/nav_home"
        android:name="com.tfg.virtualteca.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_books"
        android:name="com.tfg.virtualteca.ui.book.BookFragment"
        android:label="@string/books_menu"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_partners"
        android:name="com.tfg.virtualteca.ui.partner.PartnerFragment"
        android:label="@string/partner_menu"
        tools:layout="@layout/fragment_partners" />
    <fragment
        android:id="@+id/nav_loans"
        android:name="com.tfg.virtualteca.ui.loan.LoanFragment"
        android:label="@string/loan_menu"
        tools:layout="@layout/fragment_loans"/>
</navigation>