<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add_element.Book_add">

    <Button
        android:id="@+id/bSaveButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="278dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:text="@string/Save"
        app:cornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.418"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975"
        app:strokeColor="@color/purple_500" />

    <EditText
        android:id="@+id/titleText"
        android:layout_width="366dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Title"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/authorText"
        android:layout_width="191dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Author"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/isbnText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/isbnText"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/ISBN"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.906"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/genreText"
        android:layout_width="366dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Genre"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/authorText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editorialText"
        android:layout_width="191dp"
        android:layout_height="53dp"
        android:layout_marginTop="32dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editorial"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.082"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreText"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editTextText5"
        android:layout_width="165dp"
        android:layout_height="48dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/Language"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editorialText"
        app:layout_constraintTop_toBottomOf="@+id/genreText"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextText6"
        android:layout_width="366dp"
        android:layout_height="322dp"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:hint="@string/Synopsis"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/genreText"
        app:layout_constraintVertical_bias="0.0"
        android:autofillHints="" />
</androidx.constraintlayout.widget.ConstraintLayout>